Update new press records and links. Add underline to zine jr pdfs.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ layout: default
 					<div class="content">
 					<h2 class="is-inline-block">READ: the zine &amp; workbook</h2>
 					<p>Our zine shines a light on the risks to digital files, and offers what you can do to prevent catastrophe while also saving &amp; organizing your files for future access. Use it to follow along with our podcast, during a workshop, or on your own. It is absolutely free for you to read online, download, print, and distribute. </br></p>
-            <a href="/assets/ZineJr_PreserveThisPodcastWorkshop_frontback.pdf" target="blank">Zine Jr. (the mini-workbook from our workshop)</a> is also available to print front and back of one page. Simple <a href="/zineJr-instructions.html">cut-and-fold instruction here.</a></p>
+           <u><a href="/assets/ZineJr_PreserveThisPodcastWorkshop_frontback.pdf" target="blank">Zine Jr. (the mini-workbook from our workshop)</a></u> is also available to print front and back of one page. Simple <u><a href="/zineJr-instructions.html">cut-and-fold instruction here.</a></u></p>
 					{% if site.data.content.zine_link %}
 						<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless" target="_blank">Read Online</a>
 					{% else %}
