--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ layout: default
 					<div class="content">
 					<h2 class="is-inline-block">READ: the zine &amp; workbook</h2>
 					<p>Our zine shines a light on the risks to digital files, and offers what you can do to prevent catastrophe while also saving &amp; organizing your files for future access. Use it to follow along with our podcast, during a workshop, or on your own. It is absolutely free for you to read online, download, print, and distribute. </br></p>
-           <u><a href="/assets/ZineJr_PreserveThisPodcastWorkshop_frontback.pdf" target="blank">Zine Jr. (the mini-workbook from our workshop)</a></u> is also available to print front and back of one page. Simple <u><a href="/zineJr-instructions.html">cut-and-fold instruction here.</a></u></p>
-			<p>Download & color the <u><a href="/assets/PreserveThisPodcast_metadata_coloring_sheet-bw.pdf">Metadata Archaeology Coloring Sheet</a></u>! A fun worksheet for you to color-in while you listen to <u><a href="https://media.simplecast.com/episodes/audio/294873/PreserveThisPodcast_Episode4.mp3" alt="link to ep4 in RSS feed">Ep 4: Metadata Meta-awareness</a></u></p>
+           <u><a href="/assets/ZineJr_PreserveThisPodcastWorkshop_frontback.pdf" target="_blank">Zine Jr. (the mini-workbook from our workshop)</a></u> is also available to print front-back of one page. Simple <u><a href="/zineJr-instructions.html" target="_blank">cut-and-fold instruction here.</a></u></p>
+			<p>Download & color the <u><a href="/assets/PreserveThisPodcast_metadata_coloring_sheet-bw.pdf" target="_blank">Metadata Archaeology Coloring Sheet</a></u>! A fun worksheet for you to color-in while you listen to <u><a href="https://media.simplecast.com/episodes/audio/294873/PreserveThisPodcast_Episode4.mp3" alt="link to ep4 in RSS feed" target="_blank">Ep 4: Metadata Meta-awareness</a></u></p>
 					{% if site.data.content.zine_link %}
 						<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless" target="_blank">Read Online</a>
 					{% else %}
