--- a/pages/press.html
+++ b/pages/press.html
@@ -9,6 +9,10 @@ layout: default
 				<div class="content">
 					<h1>Press Room</h1>
 						<p class="is-size-5-tablet">Please contact <a href='mai&#108;&#116;&#111;&#58;p%6Fdca&#115;t&#64;met&#114;o&#46;%&#54;Fr&#37;67'>podc&#97;s&#116;&#64;me&#116;r&#111;&#46;o&#114;g</a> for press inquiries.</p>
+						<h3>July 2019</h3>
+						<p>
+																												<strong>August 5, 2019</strong> &nbsp; <a href="https://discoverpods.com/best-podcasts-2019-so-far/" target="_blank">The Best Podcasts of 2019 (So Far)</a> -- Discover Pods<a class="preview" href="https://web.archive.org/web/20190806154520/https://discoverpods.com/best-podcasts-2019-so-far/" target="_blank"><img src="{{base}}/assets/images/internetArchiveLogo.jpg" alt="Internet Archive logo" width="20" height="20"></a>
+						</p>
 						<h3>June 2019</h3>
 						<p>
                                                         <strong>June 17, 2019</strong> &nbsp; <a href="http://dcpl.fullserviceradio.org/fb6d3175" target="_blank">Episode 72: DCPL Presents: Preserve This Podcast</a> -- DCPL Radio<a class="preview" href="https://web.archive.org/web/20190618184040/http://dcpl.fullserviceradio.org/fb6d3175" target="_blank"><img src="{{base}}/assets/images/internetArchiveLogo.jpg" alt="Internet Archive logo" width="20" height="20"></a>
