Fix read-list url on About page

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@ layout: default
 							<a href="http://preservethispodcast.org/pages/press.html" target'"_blank">Press Room</a>
 						</p>
 						<p class="is-size-5-tablet">
-							<a href="http://preservethispodcast.org/pages/reading-listen.html" target'"_blank">Reading List</a>
+							<a href="http://preservethispodcast.org/pages/reading-list.html" target'"_blank">Reading List</a>
 				</div>
 			</div>
 		</div>
