Test: Add js script from bibbase for reading list

--- a/pages/reading-list.html
+++ b/pages/reading-list.html
@@ -8,7 +8,7 @@ layout: default
 			<div class="column is-two-thirds-tablet">
 				<div class="content">
             <h1>PTP's Reading List</h1>
-            <p>This is our bibliography from our Zotero library, which is public (with closed membership) and viewable here: <a href="https://www.zotero.org/groups/2350194/preserve-this-podcast">https://www.zotero.org/groups/2350194/preserve-this-podcast</a>.
+            <p>This is our bibliography exported from <a href="https://www.zotero.org/groups/2350194/preserve-this-podcast">our Zotero library</a>, which is public (with closed membership).
             </p>
 
             <script type="text/javascript" src="https://cdn.rawgit.com/pcooksey/bibtex-js/5ccf967/src/bibtex_js.js"></script>
