edit id=survey section

--- a/index.html
+++ b/index.html
@@ -145,7 +145,21 @@ layout: default
 			<div class="box has-text-centered">
 				<div class="content">
 					<a href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank" class="button is-primary is-large">Survey Data & Results (PDF)</a>
-					<small class="is-block">Graphs & charts about podcasters' preservation practices are open &  available</small>
+				</div>
+			</div>
+      <div class="box has-text-centered">
+				<div class="content">
+					<a href="{{ base }}/pages/reading-list.html" target="_blank" class="button is-primary is-large">Reading List</a>
+				</div>
+			</div>
+      <div class="box has-text-centered">
+				<div class="content">
+					<a href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank" class="button is-primary is-large">Release Form Template</a>
+				</div>
+			</div>
+      <div class="box has-text-centered">
+				<div class="content">
+					<a href="https://github.com/mnylc/preservethispodcast" target="_blank" class="button is-primary is-large">DIY Website & RSS Feed</a>
 				</div>
 			</div>
 		</div>
