edit icons in survey/resources section

--- a/index.html
+++ b/index.html
@@ -144,27 +144,22 @@ layout: default
 		<div class="column is-half">
 			<div class="box has-text-centered">
 				<div class="content">
-          <a class="preview" href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank"><img src="{{base}}/assets/images/bar-chart-2.png" alt="Bar chart icon representing survey data"></a>
-					<a href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank" class="button is-primary is-large">Survey Data & Results (PDF)</a>
+					<a href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/bar-chart-2.png" alt="Bar chart icon representing survey data">Survey Data & Results (PDF)</a>
 				</div>
 			</div>
       <div class="box has-text-centered">
 				<div class="content">
-          <a class="preview" href="{{ base }}/pages/reading-list.html" target="_blank"><img src="{{base}}/assets/images/book-open.png" alt="Book open icon representing reading list"></a>
-          <a href="{{ base }}/pages/reading-list.html" target="_blank" class="button is-primary is-large">Reading List</a>
+          <a href="{{ base }}/pages/reading-list.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/book-open.png" alt="Book open icon representing reading list">Reading List</a>
 				</div>
 			</div>
       <div class="box has-text-centered">
 				<div class="content">
-          <a class="preview" href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank"><img src="{{base}}/assets/images/user-check.png" alt="Person checkmark icon representing release form"></a>
-					<a href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank" class="button is-primary is-large">Guest Release Form Template</a>
+					<a href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/user-check.png" alt="Person checkmark icon representing release form">Guest Release Form Template</a>
 				</div>
 			</div>
       <div class="box has-text-centered">
 				<div class="content">
-          <a class="preview" href="https://github.com/mnylc/preservethispodcast" target="_blank"><img src="{{base}}/assets/images/github.png" alt="GitHub logo icon representing Github"></a>
-					<a href="https://github.com/mnylc/preservethispodcast" target="_blank" class="button is-primary is-large">DIY Website & RSS Feed</a>
-          <a class="preview" href="https://github.com/mnylc/preservethispodcast" target="_blank"><img src="{{base}}/assets/images/external-link.png" alt="external link"></a>
+					<a href="https://github.com/mnylc/preservethispodcast" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/github.png" alt="GitHub logo icon representing Github">DIY Website & RSS Feed<img src="{{base}}/assets/images/external-link.png" alt="external link"></a>
 				</div>
 			</div>
 		</div>
