--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@ layout: default
 </section>
 <section id="survey" class="section">
 	<div class="columns is-centered">
+    <h2>RESOURCES</h2>
 		<div class="column is-half">
 			<div class="box has-text-centered">
 				<div class="content">
