hide GitHub repo link until ready

--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@ layout: default
 </section>
 <section id="survey" class="section">
 	<div class="columns is-centered">
-    <h2>RESOURCES</h2>
 		<div class="column is-half">
 			<div class="box has-text-centered">
 				<div class="content">
@@ -158,11 +157,13 @@ layout: default
 					<a href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/user-check.png" alt="Person checkmark icon representing release form"> Guest Release Form Template</a>
 				</div>
 			</div>
+      <!-- hide github repo until ready
       <div class="box has-text-centered">
 				<div class="content">
 					<a href="https://github.com/mnylc/preservethispodcast" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/github.png" alt="GitHub logo icon representing Github"> DIY Website & RSS Feed</a>
 				</div>
 			</div>
+      -->
 		</div>
 	</div>
 </section>
