--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ layout: default
 			</div>
       <div class="box has-text-centered">
 				<div class="content">
-					<a href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/user-check.png" alt="Person checkmark icon representing release form">&nbsp; Guest Release Form Template</a>
+					<a href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/user-check.png" alt="Person checkmark icon representing release form">&nbsp; Guest Release Form Template &nbsp;<img src="{{base}}/assets/images/download.png" alt="Download icon"></a>
 				</div>
 			</div>
       <!-- hide github repo until ready
