edit email address to unicode

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ layout: default
 			<div class="box">
 				<div class="content">
 					<h2 class="is-inline-block">ATTEND: workshops &amp; conferences</h2>
-					<p>We want to meet you! The archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at <a href='mai&#108;&#116;&#111;&#58;p%6Fdca&#115;t&#64;met&#114;o&#46;%&#54;Fr&#37;67'>podc&#97;s&#116;&#64;me&#116;r&#111;&#46;o&#114;g</a> if you're interested in hosting a workshop.</p>
+					<p>We want to meet you! The archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at &#112;&#111;&#100;&#99;&#97;&#115;&#116;&#64;&#109;&#101;&#116;&#114;&#111;&#46;&#111;&#114;&#103;  if you're interested in hosting a workshop.</p>
 				</div>
 
 				{% for event in site.data.content.events %}
