--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@ layout: default
 					<h2 class="is-inline-block">READ: the zine &amp; workbook</h2>
 					<p>Our zine shines a light on the risks to digital files, and offers what you can do to prevent catastrophe while also saving &amp; organizing your files for future access. Use it to follow along with our podcast, during a workshop, or on your own. It is absolutely free for you to read online, download, print, and distribute. </br></p>
            <u><a href="/assets/ZineJr_PreserveThisPodcastWorkshop_frontback.pdf" target="_blank">Zine Jr. (the mini-workbook from our workshop)</a></u> is also available to print front-back on one page. Simple <u><a href="/assets/zineJr-instructions.html" target="_blank">cut-and-fold instruction here.</a></u></p>
-      <p>Play! From Episode 3 <u><a href="http://preservethispodcast.org/adventure">Backup, Store, or Lose Game</a></u>  (pg. 10 in the zine)</p>
       <p>Download & color! From Episode 4 <u><a href="/assets/PreserveThisPodcast_metadata_coloring_sheet-bw.png" target="_blank">Metadata Archaeology Coloring Sheet</a></u> (pg. 12 in the zine)</p>
 					{% if site.data.content.zine_link %}
 						<a href="{{ site.data.content.zine_link }}" class="button is-primary is-large is-marginless" target="_blank">Read Online</a>
@@ -135,6 +134,7 @@ layout: default
 						<button disabled class="button is-large is-marginless">Read Online</button>
 					{% endif %}
 					&nbsp; &nbsp; <a href="{{ site.data.content.zinePrint_link }}" class="button is-primary is-large is-marginless" target="_blank">Print &amp; Read</a>
+					&nbsp; &nbsp; <a href="http://preservethispodcast.org/adventure" class="button is-primary is-large is-marginless" target="_blank">Play Game!</a>
 					</div>
 				</div>
 			</div>
