update archiving ourselves to self-preservation

--- a/pages/self-preservation.html
+++ b/pages/self-preservation.html
@@ -6,7 +6,7 @@ layout: default
 		<div class="columns is-centered">
 			<div class="column is-two-thirds-tablet">
 				<div class="content">
-					<h1>Archiving the Preserve This Podcast Project</h1>
+					<h1>Self Preservation</h1>
 
 <h3>Archiving the Podcast Files</h3>
 <h6>MOLLY SCHWARTZ</h6>
