Add sitewide divs to diyworkshop.html

--- a/pages/diyworkshop.html
+++ b/pages/diyworkshop.html
@@ -1,4 +1,13 @@
-<html lang=”en-us”>
+---
+layout: default
+---
+<section id="generic" class="section">
+	<div class="container">
+		<div class="columns is-centered">
+			<div class="column is-two-thirds-tablet">
+				<div class="content">
+
+<html lang="en-us">
 
 
 <head></head>
@@ -13,21 +22,21 @@
 
 
 <p>
-<b>So you want to host a podcast preservation workshop?</b> That’s a great idea! Preserving your podcast with a group of people is great, because together you can share/bounce ideas off one another, support each other through snags, and check in with each other’s progress after the workshop ends.
+<b>So you want to host a podcast preservation workshop?</b> That's a great idea! Preserving your podcast with a group of people is great, because together you can share/bounce ideas off one another, support each other through snags, and check in with each other's progress after the workshop ends.
 </p>
 
 
 
 
 <p>
-<b>This document provides a guide for setting up your own DIY podcast preservation workshop.</b> There are many ways that you can approach a DIY workshop, and by no means is this the be-all, end-all guide. Consider this document like a box of yarn, from which you may create any number of socks! It’s up to you!</p>
+<b>This document provides a guide for setting up your own DIY podcast preservation workshop.</b> There are many ways that you can approach a DIY workshop, and by no means is this the be-all, end-all guide. Consider this document like a box of yarn, from which you may create any number of socks! It's up to you!</p>
 
 
 <p><b>Unsure of what podcast preservation is?</b> Check out the Preserve This Podcast <a href="http://preservethispodcast.org/">website</a>, especially the <a href="http://preservethispodcast.org/pages/about.html">about page</a>, <a href="https://podcasts.apple.com/us/podcast/preserve-this-podcast/id1451896473">podcast</a>, and <a href="http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf">zine</a> for more details. In short: podcast preservation makes sure future generations of listeners are able to access your podcast files.
 
 </p>
 
-<p><b>Not a podcaster, but want to join in on the fun?</b> Not a problem! The principles that guide podcast preservation apply to all creators, not just podcast creators. If you’re a writer using a word processor, a musician using a digital audio workstation, an illustrator using a design program, or anyone else creating digital stuff, you can use this guide for your own preservation goals.
+<p><b>Not a podcaster, but want to join in on the fun?</b> Not a problem! The principles that guide podcast preservation apply to all creators, not just podcast creators. If you're a writer using a word processor, a musician using a digital audio workstation, an illustrator using a design program, or anyone else creating digital stuff, you can use this guide for your own preservation goals.
 
 </p>
 
@@ -40,7 +49,7 @@
 </p>
 
 
-<p>The beautiful thing about podcasting is that it has attracted a variety of people from all walks of life to share their stories. A DIY workshop will bring people together into a shared space, so it’s important that these spaces be places where people feel safe, comfortable, and heard.</p>
+<p>The beautiful thing about podcasting is that it has attracted a variety of people from all walks of life to share their stories. A DIY workshop will bring people together into a shared space, so it's important that these spaces be places where people feel safe, comfortable, and heard.</p>
 
 
 
@@ -95,7 +104,7 @@ p>
 
 <h3>Facilitation</h3>
 
-<p>Facilitating a workshop takes time, energy, and a little bit of practice. We strongly suggest sharing the role of workshop facilitator with other people, if possible. That way, you can take a break from facilitating and leverage each other’s strengths, and assign roles for a smooth workshop (for example, while one person facilitates, another person help with participant check-in, taking questions or making sure people are connected to the right WiFi network).</p>
+<p>Facilitating a workshop takes time, energy, and a little bit of practice. We strongly suggest sharing the role of workshop facilitator with other people, if possible. That way, you can take a break from facilitating and leverage each other's strengths, and assign roles for a smooth workshop (for example, while one person facilitates, another person help with participant check-in, taking questions or making sure people are connected to the right WiFi network).</p>
 
 <p>There are a number of free, comprehensive resources available online that talk about how to be a good facilitator, that are worth checking out*.</p>
 
@@ -115,7 +124,7 @@ p>
 
 <p>Before approaching a potential workshop space, figure out 2-3 dates and time slots that work for you and your co-facilitators. Ideally, a workshop would take no less than 2 hours (to make sure you cover all the bases), and no more than 4 hours (to prevent burnout).</p>
 
-<p>When you’re thinking about dates, consider events and groups in your area. For example, if your area has a big podcasting scene, look to upcoming podcast festivals or conferences where you can take advantage of a lot of podcasters being in the same space at the same time.</p>
+<p>When youï¿½re thinking about dates, consider events and groups in your area. For example, if your area has a big podcasting scene, look to upcoming podcast festivals or conferences where you can take advantage of a lot of podcasters being in the same space at the same time.</p>
 
 <h4>Figure out where</h4>
 
@@ -138,7 +147,7 @@ p>
 
 <p>Some potential host institution types that may be able to provide one or more of the above amenities include: public libraries, universities/schools, community centers, public media organizations, podcast hubs, and co-working spaces.</p>
 
-<p>Here’s a non-exhaustive list of potential hosts that PTP has worked with, or know to be great hosts. Right now this list is very NYC-heavy. If you have worked with any awesome hosts, feel free to add them to the list below (if possible, please include a URL to their website, if they have one):</p>
+<p>Here's a non-exhaustive list of potential hosts that PTP has worked with, or know to be great hosts. Right now this list is very NYC-heavy. If you have worked with any awesome hosts, feel free to add them to the list below (if possible, please include a URL to their website, if they have one):</p>
 
 <ul>
 
@@ -180,11 +189,11 @@ p>
 
 <h4>Create an event page</h4>
 
-<p>Creating an online event page is helpful to gather RSVPs, provide an easy way to communicate with participants before and after your workshop, and give attendees a single place to find information about the when/where of your workshop. There are plenty of free event tools, like <a href="https://www.eventbrite.com/" target="_blank">Eventbrite</a>, that do this pretty well.</p>
+<p>Creating an online event page is helpful to gather RSVPs, provide an easy way to communicate with participants before and after your workshop, and give attendees a single place to find information about the when/where of your workshop. There are plenty of free event tools, like <a href="https://gath.io/" target="_blank">gath.io</a>, that do this pretty well.</p>
 
 <h4>Promote your event</h4>
 
-You’ll need people to come to your event! Here are some suggestions for connecting with podcasters in your area by:
+You'll need people to come to your event! Here are some suggestions for connecting with podcasters in your area by:
 <ul>
 	<li>Contacting local radio stations</li>
 	<li>Finding and posting on a local Reddit podcast pages or other online community message board</li>
@@ -205,9 +214,9 @@ You’ll need people to come to your event! Here are some suggestions for connecti
 
 <h3>Slide deck</h3>
 
-<p>If you’re in a venue that has a projector, you can copy and save the <a href="https://docs.google.com/presentation/d/10XX0RnbsJbGFlkSmxym9DsaaNUzkz8kieTAacHOIiYs/edit?usp=sharing" target="_blank">PTP slide deck template</a> either on your Google Drive (if you have/use a Google account) or as a PDF to your desktop. A slide deck can be helpful for people to follow along, and adds some eye-catching visuals and audiograms to your workshop. Feel free to use the whole slide deck, add your own information, or remix/remove slides as needed.
+<p>If you're in a venue that has a projector, you can copy and save the <a href="https://docs.google.com/presentation/d/10XX0RnbsJbGFlkSmxym9DsaaNUzkz8kieTAacHOIiYs/edit?usp=sharing" target="_blank">PTP slide deck template</a> either on your Google Drive (if you have/use a Google account) or as a PDF to your desktop. A slide deck can be helpful for people to follow along, and adds some eye-catching visuals and audiograms to your workshop. Feel free to use the whole slide deck, add your own information, or remix/remove slides as needed.
 
-<p>If you’re in a venue without the internet, make sure to download the slide deck beforehand, so it can be projected offline.</p>
+<p>If you're in a venue without the internet, make sure to download the slide deck beforehand, so it can be projected offline.</p>
 
 <p>In lieu of a slide deck, we have also provided a sample agenda, discussion points, and activities below that can be printed out and distributed to attendees either before or during the workshop.</p>
 
@@ -223,7 +232,7 @@ You’ll need people to come to your event! Here are some suggestions for connecti
 
 
 
-<h3>The “Preserve This Podcast” Podcast</h3>
+<h3>The "Preserve This Podcast" Podcast</h3>
 
 <p>The <a href="https://radiopublic.com/preserve-this-podcast-WDJY3A" target="_blank">Preserve This Podcast 5-episode miniseries</a> is a great way for participants to get acquainted with basic preservation concepts either before or during your workshop. Each episode features a different independent podcaster taking on a preservation exercise as outlined in the zine, and covers file/folder organization, storage/backups, metadata, and RSS.</p>
 
@@ -309,8 +318,8 @@ You’ll need people to come to your event! Here are some suggestions for connecti
 
 <ul>
 	<li>Open up and play the Store, Backup or Lose game either by projecting it up on a screen, or having people break out into teams or individually and use a laptop/smartphone.</li>
-	<li>Use a laptop or pen/paper to draft a folder template for each participant’s show.</li>
-	<li>Draw a filenaming convention “hamburger”</li>
+	<li>Use a laptop or pen/paper to draft a folder template for each participant's show.</li>
+	<li>Draw a filenaming convention "hamburger"</li>
 	<li>Have each podcaster email their RSS host and ask how long they hold onto your files and whether they do a 301 redirect (or try and find out this information online)</li>
 	<li>Create an Internet Archive account, and upload one or more podcast audio files.</li>
 	<li>Write out a Podcast Preservation Plan</li>
@@ -320,7 +329,7 @@ You’ll need people to come to your event! Here are some suggestions for connecti
 	<li>Read something from the PTP reading list and have people share thoughts/ideas.</li>
 </ul>
 
-<p>If you can do one of these things, you’re on your way to preserving your podcast!</p>
+<p>If you can do one of these things, you're on your way to preserving your podcast!</p>
 
 
 
@@ -328,3 +337,8 @@ You’ll need people to come to your event! Here are some suggestions for connecti
 
 
 </html>
+
+</div>
+	</div>
+		</div>
+</section>
