add resource buttons for diy workshop and self pres

--- a/index.html
+++ b/index.html
@@ -158,6 +158,22 @@ layout: default
 					<a href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/user-check.png" alt="Person checkmark icon representing release form">&nbsp; Guest Release Form Template &nbsp;<img src="{{base}}/assets/images/download.png" alt="Download icon"></a>
 				</div>
 			</div>
+
+      <div class="box has-text-centered">
+				<div class="content">
+					<a href="{{ base }}/pages/diyworkshop.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/nounProject_Meeting_1057559_akritiBhusalNP.png 	" alt="Group of people meeting around a table">&nbsp; Guide to Host Your Own Workshop</a>
+				</div>
+
+        <div class="box has-text-centered">
+          <div class="content">
+            <a href="{{ base }}/assets/self-preservation.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/nounProject_SelfCare_2068908_priyankaIN.png" alt="Hand holding a leaf and happy face">&nbsp; Self Preservation Docs</a>
+          </div>
+        </div>
+
+			</div>
+      </div>
+      </div>
+      </div>
       <!-- hide github repo until ready
       <div class="box has-text-centered">
 				<div class="content">
@@ -176,6 +192,7 @@ layout: default
 				<div class="content">
 					<h2 class="is-inline-block">ATTEND: workshops &amp; conferences</h2>
 					<p>We want to meet you! The archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at <u>preservethispodcast[at]protonmail.com</u> if you're interested in hosting a workshop.</p>
+          <p>Here's how you can <a href="http://preservethispodcast.org/pages/diyworkshop">host your own workshop</a></p>
 				</div>
 
 				{% for event in site.data.content.events %}
