add missing div to diy wkshp button

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ layout: default
 				<div class="content">
 					<a href="{{ base }}/pages/diyworkshop.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/nounProject_Meeting_1057559_akritiBhusalNP.png 	" alt="Group of people meeting around a table">&nbsp; Guide to Host Your Own Workshop</a>
 				</div>
+      </div>
 
         <div class="box has-text-centered">
           <div class="content">
