fix header for Archiving the Website

--- a/pages/self-preservation.html
+++ b/pages/self-preservation.html
@@ -73,7 +73,7 @@ Figure A: A screenshot of my folder structure on my home workstation:
 <INSERT SCREENSHOT>
 Figure. B: A screenshot of the PTP Google Drive “zine_layout” folder:
 
-<h3>Archiving the Website</p>
+<h3>Archiving the Website</h3>
 <h6>Dana Gerber-Margie</h6>
 
 <p>
