cite on About page to the noun project for icons

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,6 +16,9 @@ layout: default
 						</p>
 						<p class="is-size-5-tablet">
 							<a href="http://preservethispodcast.org/pages/reading-list.html" target'"_blank">Reading List</a>
+						</p>
+						<p>Icons on homepage provided by <a href="https://thenounproject.com/">The Noun Project</a>
+						</p>
 				</div>
 			</div>
 		</div>
