add screenshots and rss hosting to self-preservation page

--- a/pages/self-preservation.html
+++ b/pages/self-preservation.html
@@ -8,6 +8,11 @@ layout: default
 				<div class="content">
 					<h1>Self Preservation</h1>
 
+<h3>Longer-term Podcast Playback</h3>
+<h6>SARAH NGUYEN</h6>
+Check out the <a href="https://github.com/mnylc/preservethispodcast/blob/master/README.md">README of our GitHub repository</a> for step-by-step instructions on how to host your own RSS feed for free, using Internet Archive and GitHub Pages.
+</p>
+
 <h3>Archiving the Podcast Files</h3>
 <h6>MOLLY SCHWARTZ</h6>
 
@@ -26,7 +31,7 @@ Since the project is wrapping up and the goal is to delete all my audio files an
 <p>
 All of my Reaper session files and raw audio files are under a master folder called “REAPER Media” on my laptop. Within that folder there is a folder called “PTP,” which includes all of the Preserve This Podcast files. Within that folder there are Episode folders, like “Episode 1,” which includes all of the working files. Session files are in the Episode 1 folder, and all of the raw audio is in a folder within the Episode 1 folder called “media.” I pulled the final mixes out into separate folders for ease of reference, called “Episode 1 Final Mixes,” “Episode 2 Final,” etc.
 </p>
-<INSERT SCREENSHOT>
+<img src="{{base}}/assets/images/molly_podcast_foldering.png" alt="Scereenshot of a Mac OS folder directory for Reaper audio workstation files ">
 <p>
 Then I downloaded the “Podcast” folder from our “Preserve This Podcast” shared Google Drive folder, which includes all of my podcast episode scripts and interview transcripts, as well as some audio files (mostly narration).
 </p>
@@ -67,11 +72,13 @@ My 3-2-1 backup plan looks like this:
   </ul>
 </p>
 
-<INSERT SCREENSHOT>
-Figure A: A screenshot of my folder structure on my home workstation:
+<p>Figure A: A screenshot of my folder structure on my home workstation:</p>
+<img src="{{base}}/assets/images/mary_zine_folder_structure.png" alt="Screenshot of Mary's folder directory for zine working files">
+</p>
 
-<INSERT SCREENSHOT>
-Figure. B: A screenshot of the PTP Google Drive “zine_layout” folder:
+<p>Figure. B: A screenshot of the PTP Google Drive “zine_layout” folder:</p>
+<img src="{{base}}/assets/images/figb_mary_gdrive_folders.png" alt="Screenshot of Mary's Google Drive folder directory for zine files">
+</p>
 
 <h3>Archiving the Website</h3>
 <h6>Dana Gerber-Margie</h6>
@@ -86,9 +93,6 @@ Walked through the website through Wayback Machine to also save links, such as t
 </ul>
 </p>
 <p>
-Archive Git repo: tba
-</p>
-<p>
 Archive on webrecorder.io
 <ul>
 <li>Saves as WARC file that is accessible through web recorder player (<a href="https://guide.webrecorder.io/">webrecorder guide</a>)</li>
@@ -96,4 +100,6 @@ Archive on webrecorder.io
 Under <a href="https://webrecorder.io/danaegm/preserve-this-podcast">https://webrecorder.io/danaegm/preserve-this-podcast</a>. Aim it to a website and then “Start Capture”. Click through the website to capture it. To see it again, go to "Browse All".</li>
 <li>Download and save the WARC file onto the 3-2-1 backup plan</li>
 </ul>
+<p>
+Archive Git repo: tba
 </p>
