draft webinar recordings page

--- a/pages/self-preservation.html
+++ b/pages/self-preservation.html
@@ -81,7 +81,7 @@ My 3-2-1 backup plan looks like this:
 </p>
 
 <h3>Archiving the Website</h3>
-<h6>Dana Gerber-Margie</h6>
+<h6>DANA GERBER-MARGIE</h6>
 
 <p>
 Archive onto the Internet Archive's <a href="https://web.archive.org/save/http://preservethispodcast.org/">Wayback Machine</a>
