--- a/pages/workshop-webinar.html
+++ b/pages/workshop-webinar.html
@@ -18,9 +18,12 @@ layout: default
 <p>On January 23rd & 24th, 2020, we hosted our own free workshop as a two-part webinar. We walked through the same exact exercises and activities that we shared throughout all of our traveling workshops. Here are recordings of the webinar. Feel free to watch, start your own Personal Podcast Preservation Plan, and share with your friends. Remember that each exercise corresponds with our podcast episodes!</p>
 
 <h2>Day 1: Organization & Backups</h2>
+<p> <iframe src="https://player.vimeo.com/video/403551233" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen> </iframe></p>
+
 <p>(58 minutes duration) This webinar covers about Preserve This Podcast project, Exercise 1: Get Organized!, and Exercise 2: Store, Backup or Lose.</p>
 <p>Check out pages 1-17 of our <a href="~/assets/PreserveYourPodcast-workshopSlides.pdf>presentation slide deck (PDF)</a> to follow along.</p>
-<p>embed video to come! <a class="preview" href="https://archive.org/details/preserve-this-podcast-webinar/20200123_preserveThisPodcast_webinar_organizeBackup.mp4" target="_blank"><img src="{{base}}/assets/images/internetArchiveLogo.jpg" alt="Intern
+
+<a class="preview" href="https://archive.org/details/preserve-this-podcast-webinar/20200123_preserveThisPodcast_webinar_organizeBackup.mp4" target="_blank"><img src="{{base}}/assets/images/internetArchiveLogo.jpg" alt="Intern
 et Archive logo" width="20" height="20"></a>
 </p>
 
