add webinar to resources

--- a/index.html
+++ b/index.html
@@ -175,15 +175,23 @@ layout: default
       </div>
       </div>
       </div>
-      <!-- hide github repo until ready
       <div class="box has-text-centered">
 				<div class="content">
 					<a href="https://github.com/mnylc/preservethispodcast" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/github.png" alt="GitHub logo icon representing Github">&nbsp; DIY Website & RSS Feed</a>
 				</div>
 			</div>
-      -->
 		</div>
 	</div>
+
+ <div class="box has-text-centered">
+                                <div class="content">
+                                        <a href="{{ base }}/pages/workshop-webinar.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/i
+mages/videoCourse.png" alt="video player icon">&nbsp; Workshop Webinar Recordings</a>
+                                </div>
+                        </div>
+                </div>
+        </div>
+
 </section>
 <section id="events" class="section" name="events">
 
@@ -194,6 +202,7 @@ layout: default
 					<h2 class="is-inline-block">ATTEND: workshops &amp; conferences</h2>
 					<p>We want to meet you! The archivists of Preserve This Podcast will be traveling to various workshops + conferences to take podcasters, producers, and audio archivists through the curriculum of archiving podcasts. Contact us at <u>preservethispodcast[at]protonmail.com</u> if you're interested in hosting a workshop.</p>
           <p>Here's how you can <a href="http://preservethispodcast.org/pages/diyworkshop">host your own workshop</a></p>
+<p>Missed a workshop? Watch a <a href="{{ base }}/pages/workshop-webinar.html">recording a workshop webinar</a></p>
 				</div>
 
 				{% for event in site.data.content.events %}
