fix divs in Resources

--- a/index.html
+++ b/index.html
@@ -145,53 +145,42 @@ layout: default
 		<div class="column is-half">
 			<div class="box has-text-centered">
 				<div class="content">
-					<a href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/bar-chart-2.png" alt="Bar chart icon representing survey data">&nbsp; Survey Data & Results (PDF)</a>
+					<a href="{{ base }}/assets/PodcastPreservation_SurveyFindings_Feb2019.pdf" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/bar-chart-2.png" alt="Bar chart icon representing survey data">&nbsp; Data & Results (PDF)</a>
 				</div>
 			</div>
-      <div class="box has-text-centered">
+      		<div class="box has-text-centered">
 				<div class="content">
-          <a href="{{ base }}/pages/reading-list.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/book-open.png" alt="Book open icon representing reading list">&nbsp; Reading List</a>
+          			<a href="{{ base }}/pages/reading-list.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/book-open.png" alt="Book open icon representing reading list">&nbsp; Reading List</a>
 				</div>
 			</div>
-      <div class="box has-text-centered">
+      		<div class="box has-text-centered">
 				<div class="content">
 					<a href="{{ base }}/assets/Podcast_Guest_Release_Form_Template.odt" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/user-check.png" alt="Person checkmark icon representing release form">&nbsp; Guest Release Form Template &nbsp;<img src="{{base}}/assets/images/download.png" alt="Download icon"></a>
 				</div>
 			</div>
-
-      <div class="box has-text-centered">
+      		<div class="box has-text-centered">
 				<div class="content">
 					<a href="{{ base }}/pages/diyworkshop.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/nounProject_Meeting_1057559_akritiBhusalNP.png 	" alt="Group of people meeting around a table">&nbsp; Guide to Host Your Own Workshop</a>
 				</div>
-      </div>
-
-        <div class="box has-text-centered">
-          <div class="content">
-            <a href="{{ base }}/pages/self-preservation.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/nounProject_SelfCare_2068908_priyankaIN.png" alt="Hand holding a leaf and happy face">&nbsp; Self Preservation Docs</a>
-          </div>
-        </div>
-
-			</div>
-      </div>
-      </div>
-      </div>
-      <div class="box has-text-centered">
+      		</div>
+        	<div class="box has-text-centered">
+          		<div class="content">
+            		<a href="{{ base }}/pages/self-preservation.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/nounProject_SelfCare_2068908_priyankaIN.png" alt="Hand holding a leaf and happy face">&nbsp; Self Preservation Docs</a>
+          		</div>
+        	</div>
+      		<div class="box has-text-centered">
 				<div class="content">
 					<a href="https://github.com/mnylc/preservethispodcast" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/images/github.png" alt="GitHub logo icon representing Github">&nbsp; DIY Website & RSS Feed</a>
 				</div>
 			</div>
-		</div>
-	</div>
-
- <div class="box has-text-centered">
-                                <div class="content">
-                                        <a href="{{ base }}/pages/workshop-webinar.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/i
+ 			<div class="box has-text-centered">
+            	<div class="content">
+                	<a href="{{ base }}/pages/workshop-webinar.html" target="_blank" class="button is-primary is-large"><img src="{{base}}/assets/i
 mages/videoCourse.png" alt="video player icon">&nbsp; Workshop Webinar Recordings</a>
-                                </div>
-                        </div>
-                </div>
+				</div>
+			</div>
+		</div>
         </div>
-
 </section>
 <section id="events" class="section" name="events">
 
