link out to assessment on About

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,6 +17,10 @@ layout: default
 						<p class="is-size-5-tablet">
 							<a href="http://preservethispodcast.org/pages/reading-list.html" target'"_blank">Reading List</a>
 						</p>
+						<p class="is-size-5-tablet">
+                                                        <a href="https://preserve-this-podcast.gitlab.io/preserve-this-podcast-assessment/findings.html" target'"_blank">An Assessment of the 2018-2020 Project</a>
+                                                </p>
+
 						<p>Icons on homepage provided by <a href="https://thenounproject.com/">The Noun Project</a>
 						</p>
 				</div>
