--- a/pages/workshop-webinar.html
+++ b/pages/workshop-webinar.html
@@ -22,14 +22,14 @@ layout: default
 
 <p>(58 minutes duration) This webinar covers about Preserve This Podcast project, Exercise 1: Get Organized!, and Exercise 2: Store, Backup or Lose.</p>
 
-<p>Check out pages 1-17 of our <a href="~/assets/PreserveYourPodcast-workshopSlides.pdf">presentation slide deck (PDF)</a> to follow along.</p>
+<p>Check out pages 1-17 of our <a href="{{base}}/assets/PreserveYourPodcast-workshopSlides.pdf">presentation slide deck (PDF)</a> to follow along.</p>
 
 <h2>Day 2: Metadata & RSS</h2>
 <p> <iframe src="https://archive.org/details/preserve-this-podcast-webinar/20200124_preserveThisPodcast_webinar_metadataRSS.mp4" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen> </iframe></p>
 
 <p>(74 minutes duration) This recording covers Exercise 3: Metadata Archaeology, Exercise 4: RSS: Where will all the podcasts go?, and Q and A with attendees. </p>
 
-<p>Check out pages 18-27 of our <a href="~/assets/PreserveYourPodcast-workshopSlides.pdf">presentation slide deck (PDF)</a> to follow along.</p>
+<p>Check out pages 18-27 of our <a href="{{base}}/assets/PreserveYourPodcast-workshopSlides.pdf#page=11">presentation slide deck (PDF)</a> to follow along.</p>
 
 
 </body>
